--- a/css/style.css
+++ b/css/style.css
@@ -163,8 +163,13 @@ body {
 }
 
 .header-right__drop {
+  display: none;
+  width: 232px;
   position: absolute;
+  right: 0;
+  z-index: 50;
   background: #ffffff;
+  padding-bottom: 128px;
 }
 
 .header-right__burgermenu {
@@ -175,10 +180,32 @@ body {
   margin: 0 33px;
 }
 
+.header-drop__close {
+  text-align: right;
+  padding: 16px 16px 8px;
+}
+
+.header-drop__list {
+  padding-left: 34px;
+}
+
 .header-drop__text {
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
+  padding-left: 34px;
+  padding-bottom: 24px;
+}
+
+.header-drop__sub-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 20px;
 }
 
 .header-drop__item-title {
@@ -186,6 +213,14 @@ body {
   font-size: 14px;
   text-transform: uppercase;
   color: #f16d7f;
+}
+
+.header-drop__item-link {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: none;
+  color: #6f6e6e;
+  line-height: 33px;
 }
 
 .promo {
@@ -1441,6 +1476,11 @@ body {
   }
   .button-hover4:hover .card-hover__text path, .button-hover4:hover .card-hover__img path {
     fill: #f16d7f;
+  }
+  .menu-title-hover:hover {
+    font-weight: 900;
+    font-size: 14px;
+    text-transform: uppercase;
   }
   .close:hover {
     fill: #f16d7f;
