--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -24,8 +24,13 @@
          position: relative;
       }
       &__drop {
+         display: none;
+         width: 232px;
          position: absolute;
+         right: 0;
+         z-index: 50;
          background: $white;
+         padding-bottom: 128px;
       }
       &__burgermenu {
          cursor: pointer;
@@ -39,14 +44,32 @@
 // drop burger-menu
 .header {
    &-drop {
+      &__close {
+         text-align: right;
+         padding: 16px 16px 8px;
+      }
+      &__list {
+         padding-left: 34px;
+      }
       &__text {
          @include fontstyle(semibold, text, upper);
+         padding-left: 34px;
+         padding-bottom: 24px;
       }
-      &__list{}
-      &__item{
-         &-title{
+      &__sub-item {
+         display: flex;
+         flex-direction: column;
+         padding-left: 20px;
+      }
+      &__item {
+         &-title {
             @include fontstyle(regular, text, upper);
             color: $bittersweet;
+         }
+         &-link {
+            @include fontstyle(regular, text, none);
+            color: $dimgray;
+            line-height: 33px;
          }
       }
    }
