--- a/css/style.css
+++ b/css/style.css
@@ -118,13 +118,12 @@ body {
           flex-grow: 1;
 }
 
-.trans {
-  -webkit-transition: all 0.1s linear;
-  transition: all 0.1s linear;
-}
-
 .header {
   background: #000000;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .header__wrap {
@@ -1338,6 +1337,7 @@ body {
   line-height: 13px;
   color: #000000;
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .registration-form__label-input {
@@ -1431,6 +1431,11 @@ body {
   line-height: 32px;
   color: #000000;
   background: #ffffff;
+}
+
+.trans {
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
 }
 
 @media (min-width: 768px) {
