problem solving in a Evernote

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,16 @@ aside {
 }
 
 html,
+body {
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
 input,
 button,
 textarea {
@@ -109,7 +119,6 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 100vh;
 }
 
 .main {
@@ -163,12 +172,14 @@ body {
 
 .header-right__drop {
   display: none;
+  height: 764px;
   width: 232px;
   position: absolute;
   right: 0;
   z-index: 50;
   background: #ffffff;
-  padding-bottom: 128px;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
 }
 
 .header-right__burgermenu {
@@ -712,6 +723,7 @@ body {
   padding: 0 16px 13px 16px;
   position: absolute;
   top: 0;
+  z-index: 5;
   background: #ffffff;
 }
 
@@ -729,10 +741,12 @@ body {
 }
 
 .product-filter__link {
+  background: none;
   font-weight: 700;
   font-size: 14px;
   text-transform: capitalize;
   color: #000000;
+  padding: 13px 0;
 }
 
 .product-filter__link-svg {
@@ -741,7 +755,7 @@ body {
 
 .product-filter__details {
   margin-top: 18px;
-  width: 325px;
+  width: 330px;
 }
 
 .product-filter__details::before {
@@ -782,6 +796,7 @@ body {
 .product-details__list {
   text-align: left;
   padding-left: 12px;
+  padding-top: 24px;
 }
 
 .product-list__link {
@@ -790,7 +805,7 @@ body {
   font-size: 14px;
   text-transform: capitalize;
   display: block;
-  line-height: 24px;
+  line-height: 26px;
 }
 
 .product-options__details summary::-webkit-details-marker {
@@ -870,7 +885,7 @@ body {
   margin: 0 auto;
 }
 
-.product-list__link {
+.product-list__page {
   font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
@@ -885,6 +900,15 @@ body {
 .fa-chevron-left,
 .fa-chevron-right {
   color: #000000;
+}
+
+.activefilter {
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+
+.openfilter {
+  display: block;
 }
 
 .product__preview {
@@ -1482,6 +1506,12 @@ body {
   .button-hover4:hover .card-hover__text path, .button-hover4:hover .card-hover__img path {
     fill: #f16d7f;
   }
+  .button-hover5:hover {
+    color: #f16d7f;
+  }
+  .button-hover5:hover .product-filter__link-svg path {
+    fill: #f16d7f;
+  }
   .menu-title-hover:hover {
     font-weight: 900;
     font-size: 14px;
@@ -1512,5 +1542,8 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  .checkbox-hover:hover {
+    color: #f16d7f;
   }
 }
