--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -54,6 +54,7 @@
          padding: 0 16px 13px 16px;
          position: absolute;
          top: 0;
+         z-index: 5;
          background: #ffffff;
       }
       // Options
@@ -68,15 +69,17 @@
    }
    &-filter {
       &__link {
+         background: none;
          @include fontstyle(semibold, text, cap);
          color: $black;
+         padding: 13px 0;
          &-svg {
             margin-left: 11px;
          }
       }
       &__details {
          margin-top: 18px;
-         width: 325px;
+         width: 330px;
          &::before {
             content: "";
             display: block;
@@ -112,13 +115,14 @@
       &__list {
          text-align: left;
          padding-left: 12px;
+         padding-top: 24px;
       }
    }
    &-list__link {
       color: $dimgray;
       @include fontstyle(regular, text, cap);
       display: block;
-      line-height: 24px;
+      line-height: 26px;
    }
    &-options {
       &__details {
@@ -176,7 +180,7 @@
       padding: 13px 15px;
       margin: 0 auto;
    }
-   &-list__link {
+   &-list__page {
       @include fontstyle(regular, text, upper);
       color: #ebebeb;
       background: none;
@@ -186,7 +190,18 @@
    }
 }
 
+// Arrow into pagination  
 .fa-chevron-left,
 .fa-chevron-right {
    color: $black;
+}
+
+// Active filter
+.activefilter {
+   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+   
+}
+// Open filter 
+.openfilter {
+   display: block;
 }
