--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -99,7 +99,7 @@
    }
 }
 
-// Media
+// Media for INDEX
 
 @media all {
    // Media for Header
@@ -111,7 +111,7 @@
                display: none;
             }
          }
-         &__drop{
+         &__drop {
             @media (max-width: $level_4) {
                width: 100%;
                height: 100vh;
@@ -184,7 +184,7 @@
    // Media for categories
    .categories {
       &__wrap {
-         @media (max-width: $level_1) {
+         @media (max-width: $level_0) {
             max-width: 820px;
          }
          @media (max-width: $level_3) {
@@ -228,9 +228,6 @@
          }
       }
       &__grid-wrap {
-         @media (max-width: $level_1) {
-            justify-content: center;
-         }
          @media (max-width: $level_4) {
             gap: 16px;
             margin: 72px auto 33px;
@@ -285,6 +282,9 @@
             align-items: center;
             padding: 53px 15px 140px;
          }
+         @media (max-width: $level_6) {
+            padding: 64px 9px 109px;
+         }
       }
       &__info {
          @media (max-width: $level_2) {
@@ -314,6 +314,53 @@
          @media (max-width: $level_6) {
             flex-direction: column-reverse;
             padding-bottom: 9px;
+         }
+      }
+   }
+}
+
+// Media for CART
+
+@media all {
+   // Media for shopping
+   .shopping {
+      @media (max-width: $level_1) {
+         justify-content: center;
+         margin-top: 59px;
+      }
+      &__wrap {
+         @media (max-width: $level_1) {
+            max-width: 768px;
+            margin-bottom: 64px;
+         }
+      }
+      &__grid-wrap {
+         width: 100%;
+      }
+      &__card {
+         grid-template-columns: 34% 47% 10%;
+      }
+      &__button {
+         @media (max-width: $level_1) {
+            max-width: none;
+            margin-top: 62px;
+         }
+      }
+
+      &__form {
+         @media (max-width: $level_1) {
+            display: flex;
+            margin-left: 0;
+            margin-top: 0;
+            width: 100%;
+            max-width: 768px;
+            justify-content: space-between;
+         }
+      }
+      &__totalcost {
+         @media (max-width: $level_1) {
+            margin-top: 42px;
+            margin-bottom: 20px;
          }
       }
    }
