--- a/css/style.css
+++ b/css/style.css
@@ -1205,7 +1205,7 @@ body {
   text-transform: capitalize;
   line-height: 28px;
   color: #656565;
-  text-align: end;
+  text-align: center;
   width: 43px;
   height: 24px;
   border: 1px solid #eaeaea;
@@ -1233,10 +1233,15 @@ body {
   font-size: 16px;
   text-transform: uppercase;
   line-height: 20px;
+  color: #222222;
 }
 
 .shopping-delivery__adress {
   width: 100%;
+  font-weight: 300;
+  text-transform: capitalize;
+  font-size: 13px;
+  line-height: 16px;
   border: 1px solid #a4a4a4;
   padding: 13px 0 16px 18px;
   margin-top: 20px;
@@ -1881,20 +1886,99 @@ body {
   }
 }
 
-@media all {
+@media all and (max-width: 700px) {
+  .shopping__wrap {
+    max-width: 580px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media all and (max-width: 1100px) {
   .shopping__grid-wrap {
     width: 100%;
   }
+}
+
+@media all and (max-width: 700px) {
+  .shopping__grid-wrap {
+    width: auto;
+    row-gap: 32px;
+  }
+}
+
+@media all and (max-width: 1100px) {
   .shopping__card {
-    -ms-grid-columns: 34% 47% 10%;
-        grid-template-columns: 34% 47% 10%;
+    -ms-grid-columns: 36% 32% 23%;
+        grid-template-columns: 36% 32% 23%;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping__card {
+    gap: 17px;
+    -ms-grid-columns: 143px 143px 38px;
+        grid-template-columns: 143px 143px 38px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-card__img {
+    height: 100%;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-card__name {
+    gap: 17px;
+    margin-top: 13px;
+    margin-bottom: 38px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-name__h3 {
+    margin-bottom: 25px;
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-card__text {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-card__input {
+    font-size: 10px;
+    line-height: 12px;
+    margin-left: 15px;
+  }
+}
+
+@media all and (max-width: 1100px) {
+  .shopping-card__close {
+    margin: 22px 0 0 125px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-card__close {
+    margin-top: 13px;
+    margin-left: 10px;
+    width: 10px;
+    height: 11px;
   }
 }
 
 @media all and (max-width: 1100px) {
   .shopping__button {
-    max-width: none;
-    margin-top: 62px;
+    width: 510px;
+    margin: 62px auto 0;
   }
 }
 
@@ -1914,7 +1998,22 @@ body {
 }
 
 @media all and (max-width: 1100px) {
+  .shopping__delivery {
+    max-width: 360px;
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .shopping__delivery {
+    margin-right: 15px;
+  }
+}
+
+@media all and (max-width: 1100px) {
   .shopping__totalcost {
+    max-width: 360px;
+    width: 100%;
     margin-top: 42px;
     margin-bottom: 20px;
   }
