--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -333,20 +333,81 @@
             max-width: 768px;
             margin-bottom: 64px;
          }
+         @media (max-width: $level_5) {
+            max-width: 580px;
+            justify-content: center;
+         }
       }
+      // Cards container
       &__grid-wrap {
-         width: 100%;
+         @media (max-width: $level_1) {
+            width: 100%;
+         }
+         @media (max-width: $level_5) {
+            width: auto;
+            row-gap: 32px;
+         }
       }
       &__card {
-         grid-template-columns: 34% 47% 10%;
-      }
-      &__button {
          @media (max-width: $level_1) {
-            max-width: none;
-            margin-top: 62px;
+            grid-template-columns: 36% 32% 23%;
+         }
+         @media (max-width: $level_5) {
+            gap: 17px;
+            grid-template-columns: 143px 143px 38px;
+         }
+      }
+      &-card__img {
+         @media (max-width: $level_5) {
+         height: 100%;
+         }
+      }
+      &-card__name {
+         @media (max-width: $level_5) {
+            gap: 17px;
+            margin-top: 13px;
+            margin-bottom: 38px;
+         }
+      }
+      &-name__h3 {
+         @media (max-width: $level_5) {
+            margin-bottom: 25px;
+            font-size: 16px;
+            line-height: 19px;
+         }
+      }
+      &-card__text {
+         @media (max-width: $level_5) {
+            font-size: 14px;
+            line-height: 17px;
+         }
+      }
+      &-card__input {
+         @media (max-width: $level_5) {
+            font-size: 10px;
+            line-height: 12px;
+            margin-left: 15px;
+         }
+      }
+      &-card__close {
+         @media (max-width: $level_1) {
+            margin: 22px 0 0 125px;
+         }
+         @media (max-width: $level_5) {
+            margin-top: 13px;
+            margin-left: 10px;
+               width: 10px;
+               height: 11px;
          }
       }
 
+      &__button {
+         @media (max-width: $level_1) {
+            width: 510px;
+            margin: 62px auto 0;
+         }
+      }
+      // Form container
       &__form {
          @media (max-width: $level_1) {
             display: flex;
@@ -357,8 +418,21 @@
             justify-content: space-between;
          }
       }
+      // Delivery registration
+      &__delivery {
+         @media (max-width: $level_1) {
+            max-width: 360px;
+            width: 100%;
+         }
+         @media (max-width: $level_4) {
+            margin-right: 15px;
+         }
+      }
+      // Total cost
       &__totalcost {
          @media (max-width: $level_1) {
+            max-width: 360px;
+            width: 100%;
             margin-top: 42px;
             margin-bottom: 20px;
          }
