--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,12 @@ body {
   padding: 0 15px;
 }
 
+@media (max-width: 450px) {
+  .container {
+    padding: 0 8px;
+  }
+}
+
 section,
 article,
 header,
@@ -119,6 +125,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-width: 374px;
 }
 
 .main {
@@ -1286,7 +1293,7 @@ body {
   background: #ffffff;
   font-weight: 300;
   font-size: 14px;
-  text-transform: capitalize;
+  text-transform: uppercase;
   line-height: 16px;
   color: #b1b1b1;
 }
@@ -1693,7 +1700,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .promo__h1 {
     font-size: 38px;
     margin-left: 60px;
@@ -1713,7 +1720,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .promo__h1::before {
     height: 61px;
     top: 0;
@@ -1727,7 +1734,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .promo__span {
     font-size: 20px;
     line-height: 24px;
@@ -1781,7 +1788,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .categories__card1 {
     width: 310px;
   }
@@ -1793,7 +1800,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .categories__card4 {
     width: 310px;
   }
@@ -1815,21 +1822,21 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .product__grid-wrap {
     -ms-grid-columns: (310px)[auto-fit];
         grid-template-columns: repeat(auto-fit, 310px);
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .product-card__img {
     width: 310px;
     height: auto;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .product-card__name {
     -ms-grid-columns: 310px;
         grid-template-columns: 310px;
@@ -1888,7 +1895,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .subscribe__info {
     width: 320px;
   }
@@ -1906,19 +1913,19 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .subscribe__input {
     padding: 16px 28px 16px 28px;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .subscribe-info__h4 {
     font-size: 18px;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .subscribe__h4 {
     font-size: 14px;
   }
@@ -1934,9 +1941,23 @@ body {
   }
 }
 
-@media all and (max-width: 600px) and (min-width: 320px) {
+@media all and (max-width: 600px) and (min-width: 374px) {
   .footer__links {
     padding: 43px 0 40px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .arrivals {
+    padding: 50px 0 69px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .arrivals__wrap {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -1946,6 +1967,18 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
     margin-top: 59px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping {
+    margin-top: 39px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .shopping {
+    margin-bottom: 96px;
   }
 }
 
@@ -1962,6 +1995,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-bottom: 49px;
   }
 }
 
@@ -1993,9 +2027,18 @@ body {
   }
 }
 
+@media all and (max-width: 450px) {
+  .shopping__card {
+    -ms-grid-columns: 143px 154px 27px;
+        grid-template-columns: 143px 154px 27px;
+  }
+}
+
 @media all and (max-width: 700px) {
   .shopping-card__img {
     height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -2012,6 +2055,12 @@ body {
     margin-bottom: 25px;
     font-size: 16px;
     line-height: 19px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .shopping-name__h3 {
+    margin-bottom: 5px;
   }
 }
 
@@ -2045,10 +2094,32 @@ body {
   }
 }
 
+@media all and (max-width: 450px) {
+  .shopping-card__close {
+    margin-left: 3px;
+  }
+}
+
 @media all and (max-width: 1100px) {
   .shopping__button {
     width: 510px;
     margin: 62px auto 0;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping__button {
+    width: 358px;
+    margin-top: 30px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-button__media {
+    padding: 8px 36.5px;
+    font-size: 12px;
+    line-height: 14px;
+    text-transform: none;
   }
 }
 
@@ -2067,6 +2138,16 @@ body {
   }
 }
 
+@media all and (max-width: 600px) {
+  .shopping__form {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 @media all and (max-width: 1100px) {
   .shopping__delivery {
     max-width: 360px;
@@ -2080,11 +2161,43 @@ body {
   }
 }
 
+@media all and (max-width: 600px) {
+  .shopping__delivery {
+    margin-right: 0;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .shopping-delivery__button {
+    font-size: 11px;
+    line-height: 13px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .shopping-delivery__button {
+    text-transform: none;
+    padding: 10px 22px 10px 22px;
+  }
+}
+
 @media all and (max-width: 1100px) {
   .shopping__totalcost {
     max-width: 360px;
     width: 100%;
     margin-top: 42px;
     margin-bottom: 20px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .shopping__totalcost {
+    margin-bottom: 0;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .shopping-totalcost__button {
+    padding: 14px 6px;
   }
 }
