--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -104,7 +104,7 @@
       margin-top: 23px;
       padding: 11px 12px 11px 12px;
       background: $white;
-      @include fontstyle(light, text, cap);
+      @include fontstyle(light, text, upper);
       line-height: 16px;
       color: #b1b1b1;
    }
