--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,12 @@ body {
   padding: 0 15px;
 }
 
+@media (max-width: 450px) {
+  .container {
+    padding: 0 8px;
+  }
+}
+
 section,
 article,
 header,
@@ -705,7 +711,7 @@ body {
 }
 
 .arrivals-breadcrumbs__link {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
   text-transform: uppercase;
   color: #636363;
@@ -731,19 +737,19 @@ body {
   display: -ms-grid;
   display: grid;
   gap: 30px;
-  -ms-grid-columns: (360px)[auto-fill];
-      grid-template-columns: repeat(auto-fill, 360px);
+  -ms-grid-columns: (360px)[auto-fit];
+      grid-template-columns: repeat(auto-fit, 360px);
   position: relative;
   margin-top: 50px;
-  padding-bottom: 30px;
 }
 
 .product-sidebar__filter {
   text-align: left;
-  padding: 0 16px 13px 16px;
+  padding: 0 16px;
+  margin: -13px 0 0 0;
   position: absolute;
   top: 0;
-  z-index: 5;
+  z-index: 15;
   background: #ffffff;
 }
 
@@ -754,11 +760,12 @@ body {
   display: -ms-flexbox;
   display: flex;
   z-index: 10;
-  position: absolute;
+  width: 360px;
 }
 
 .product__details {
   display: none;
+  padding-bottom: 13px;
 }
 
 .product-filter__link {
@@ -830,6 +837,14 @@ body {
   background: none;
 }
 
+.product-options__details {
+  position: relative;
+}
+
+.product-options__details .mr-0 {
+  margin-right: 0;
+}
+
 .product-options__details summary::-webkit-details-marker {
   display: none;
 }
@@ -864,6 +879,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: absolute;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -939,6 +955,10 @@ body {
 
 .filterActive .product-filter__link-svg path {
   fill: #f16d7f;
+}
+
+.right {
+  right: 0;
 }
 
 .product__preview {
@@ -1516,6 +1536,11 @@ body {
   transition: all 0.1s linear;
 }
 
+.trans2 {
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
 @media (min-width: 800px) {
   .input-hover:hover {
     border: 1px solid #e6677893;
@@ -1606,6 +1631,10 @@ body {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
   }
+  .rotate:hover {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
 }
 
 @media all and (max-width: 600px) {
@@ -1693,10 +1722,10 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .promo__h1 {
     font-size: 38px;
-    margin-left: 60px;
+    margin: 0 auto;
   }
 }
 
@@ -1713,7 +1742,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .promo__h1::before {
     height: 61px;
     top: 0;
@@ -1727,16 +1756,16 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) and (min-width: 374px) {
   .promo__span {
     font-size: 20px;
     line-height: 24px;
   }
 }
 
-@media all and (max-width: 1170px) {
+@media all and (max-width: 1100px) {
   .categories__wrap {
-    max-width: 820px;
+    gap: 18px;
   }
 }
 
@@ -1744,7 +1773,6 @@ body {
   .categories__wrap {
     -ms-grid-rows: 200px 130px;
         grid-template-rows: 200px 130px;
-    gap: 18px;
   }
 }
 
@@ -1771,19 +1799,14 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding: 0px 15px;
   }
 }
 
-@media all and (max-width: 1000px) and (min-width: 900px) {
+@media all and (max-width: 450px) {
   .categories__card1 {
-    width: 251px;
-    height: 260px;
-  }
-}
-
-@media all and (max-width: 450px) and (min-width: 320px) {
-  .categories__card1 {
-    width: 310px;
+    width: 100%;
+    height: 248px;
   }
 }
 
@@ -1793,9 +1816,17 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .categories__card4 {
-    width: 310px;
+    width: 100%;
+    height: 111px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .categories-card__img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -1815,21 +1846,21 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .product__grid-wrap {
-    -ms-grid-columns: (310px)[auto-fit];
-        grid-template-columns: repeat(auto-fit, 310px);
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .product-card__img {
-    width: 310px;
+    width: 100%;
     height: auto;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .product-card__name {
     -ms-grid-columns: 310px;
         grid-template-columns: 310px;
@@ -1888,7 +1919,7 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .subscribe__info {
     width: 320px;
   }
@@ -1906,19 +1937,19 @@ body {
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .subscribe__input {
     padding: 16px 28px 16px 28px;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .subscribe-info__h4 {
     font-size: 18px;
   }
 }
 
-@media all and (max-width: 450px) and (min-width: 320px) {
+@media all and (max-width: 450px) {
   .subscribe__h4 {
     font-size: 14px;
   }
@@ -1934,9 +1965,132 @@ body {
   }
 }
 
-@media all and (max-width: 600px) and (min-width: 320px) {
+@media all and (max-width: 600px) and (min-width: 374px) {
   .footer__links {
     padding: 43px 0 40px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .arrivals {
+    padding: 24px 0 46px;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .arrivals__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .arrivals__h3 {
+    padding-bottom: 32px;
+  }
+}
+
+@media all and (max-width: 1170px) {
+  .product__sidebar {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media all and (max-width: 800px) {
+  .product__sidebar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product__sidebar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media all and (max-width: 450px) {
+  .product-sidebar__filter {
+    margin-left: -16px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-filter__link--span {
+    display: none;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-filter__link-svg {
+    width: 37px;
+    height: 25px;
+    margin-left: 0;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-options__details summary {
+    padding-right: 21px;
+    margin-right: 20px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-options__details[open] summary {
+    padding-right: 21px;
+    margin-right: 20px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-options__details[open] .mr-0 {
+    margin-right: 0;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product-options__summary {
+    font-size: 12px;
+  }
+}
+
+@media all and (max-width: 1170px) {
+  .product-sidebar__options {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+@media all and (max-width: 1170px) {
+  .product__grid-wrap--catalog {
+    margin: 40px auto;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .product__grid-wrap--catalog {
+    margin: 32px auto 40px;
+  }
+}
+
+@media all and (max-width: 1170px) {
+  .product__card--none {
+    display: none;
   }
 }
 
