--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -2,6 +2,9 @@
 .trans {
    transition: all 0.1s linear;
 }
+.trans2 {
+   transition: all 0.5s linear;
+}
 
 // Media  $level_4
 @media (min-width: $level_4) {
@@ -100,6 +103,10 @@
    .scale:hover {
       transform: scale(1.2);
    }
+   // Hover rotate
+   .rotate:hover {
+      transform: rotateY(180deg);
+   }
 }
 
 // Media for INDEX
@@ -176,7 +183,7 @@
          }
          @media (max-width: $level_7) and (min-width: $level_8) {
             font-size: 38px;
-            margin-left: 60px;
+            margin: 0 auto;
          }
       }
       &__h1::before {
@@ -207,12 +214,11 @@
    // Media for categories
    .categories {
       &__wrap {
-         @media (max-width: $level_0) {
-            max-width: 820px;
+         @media (max-width: $level_1) {
+            gap: 18px;
          }
          @media (max-width: $level_3) {
             grid-template-rows: 200px 130px;
-            gap: 18px;
          }
          @media (max-width: $level_4) {
             grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
@@ -224,23 +230,32 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 0px 15px;
          }
       }
       &__card1 {
-         @media (max-width: $level_2) and (min-width: $level_3) {
-            width: 251px;
-            height: 260px;
-         }
-         @media (max-width: $level_7) and (min-width: $level_8) {
-            width: 310px;
+         // @media (max-width: $level_2) and (min-width: $level_3) {
+         //    width: 251px;
+         //    height: 260px;
+         // }
+         @media (max-width: $level_7) {
+            width: 100%;
+            height: 248px;
          }
       }
       &__card4 {
          @media (max-width: $level_5) and (min-width: $level_7) {
             width: 360px;
          }
-         @media (max-width: $level_7) and (min-width: $level_8) {
-            width: 310px;
+         @media (max-width: $level_7) {
+            width: 100%;
+            height: 111px;
+         }
+      }
+      &-card__img {
+         @media (max-width: $level_7) {
+            width: 100%;
+            height: 100%;
          }
       }
    }
@@ -258,19 +273,19 @@
             margin: 72px auto 33px;
             justify-content: center;
          }
-         @media (max-width: $level_7) and (min-width: $level_8) {
-            grid-template-columns: repeat(auto-fit, 310px);
+         @media (max-width: $level_7) {
+            grid-template-columns: 1fr;
          }
       }
       &-card {
          &__img {
-            @media (max-width: $level_7) and (min-width: $level_8) {
-               width: 310px;
+            @media (max-width: $level_7) {
+               width: 100%;
                height: auto;
             }
          }
          &__name {
-            @media (max-width: $level_7) and (min-width: $level_8) {
+            @media (max-width: $level_7) {
                grid-template-columns: 310px;
             }
          }
@@ -315,7 +330,7 @@
          @media (max-width: $level_2) {
             width: 365px;
          }
-         @media (max-width: $level_7) and (min-width: $level_8) {
+         @media (max-width: $level_7) {
             width: 320px;
          }
       }
@@ -328,17 +343,17 @@
          }
       }
       &__input {
-         @media (max-width: $level_7) and (min-width: $level_8) {
+         @media (max-width: $level_7) {
             padding: 16px 28px 16px 28px;
          }
       }
       &-info__h4 {
-         @media (max-width: $level_7) and (min-width: $level_8) {
+         @media (max-width: $level_7) {
             font-size: 18px;
          }
       }
       &__h4 {
-         @media (max-width: $level_7) and (min-width: $level_8) {
+         @media (max-width: $level_7) {
             font-size: 14px;
          }
       }
@@ -354,6 +369,106 @@
       &__links {
          @media (max-width: $level_6) and (min-width: $level_8) {
             padding: 43px 0 40px;
+         }
+      }
+   }
+}
+
+// Media for CATALOG
+
+@media all {
+   // New arrivals
+   .arrivals {
+      @media (max-width: $level_7) {
+         padding: 24px 0 46px;
+      }
+      &__wrap {
+         @media (max-width: $level_7) {
+            flex-direction: column;
+         }
+      }
+      &__h3 {
+         @media (max-width: $level_7) {
+            padding-bottom: 32px;
+         }
+      }
+   }
+   // Product
+   .product {
+      &__sidebar {
+         @media (max-width: $level_0) {
+            justify-content: center;
+         }
+         @media (max-width: $level_4) {
+            display: flex;
+            justify-content: space-between;
+         }
+         @media (max-width: $level_6) {
+            display: flex;
+            justify-content: center;
+         }
+      }
+      &-sidebar__filter {
+         @media (max-width: $level_7) {
+            margin-left: -16px;
+         }
+      }
+      &-filter {
+         &__link {
+            &--span {
+               @media (max-width: $level_6) {
+                  display: none;
+               }
+            }
+            &-svg {
+               @media (max-width: $level_6) {
+                  width: 37px;
+                  height: 25px;
+                  margin-left: 0;
+               }
+            }
+         }
+      }
+      &-options {
+         &__details summary {
+            @media (max-width: $level_6) {
+               padding-right: 21px;
+               margin-right: 20px;
+            }
+         }
+         &__details[open] summary {
+            @media (max-width: $level_6) {
+               padding-right: 21px;
+               margin-right: 20px;
+            }
+         }
+         &__details[open] .mr-0 {
+            @media (max-width: $level_6) {
+               margin-right: 0;
+            }
+         }
+         &__summary {
+            @media (max-width: $level_6) {
+               font-size: 12px;
+            }
+         }
+      }
+      &-sidebar__options {
+         @media (max-width: $level_0) {
+            justify-content: flex-end;
+         }
+      }
+      &__grid-wrap--catalog {
+         @media (max-width: $level_0) {
+            margin: 40px auto;
+         }
+         @media (max-width: $level_6) {
+            margin: 32px auto 40px;
+         }
+      }
+      &__card--none {
+         @media (max-width: $level_0) {
+            display: none;
          }
       }
    }
@@ -399,7 +514,7 @@
       }
       &-card__img {
          @media (max-width: $level_5) {
-         height: 100%;
+            height: 100%;
          }
       }
       &-card__name {
@@ -436,8 +551,8 @@
          @media (max-width: $level_5) {
             margin-top: 13px;
             margin-left: 10px;
-               width: 10px;
-               height: 11px;
+            width: 10px;
+            height: 11px;
          }
       }
 
