--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,14 @@ input::-ms-clear {
   display: none;
 }
 
+input:not([type=checkbox]):not([type=radio]),
+textarea,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 button {
   cursor: pointer;
 }
