--- a/scss/_nullstyle.scss
+++ b/scss/_nullstyle.scss
@@ -43,13 +43,18 @@ textarea {
 input::-ms-clear {
    display: none;
 }
-// Для iphone 
-input:not([type=checkbox]):not([type=radio]),
-textarea, 
+// Для iphone
+input:not([type="checkbox"]):not([type="radio"]),
+textarea,
 select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+}
+// Конец
+// Убрать/невидимка стрелочку у input
+input::-webkit-calendar-picker-indicator {
+   opacity: 0;
 }
 // Конец
 
