--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -146,6 +146,11 @@
             }
          }
       }
+      .burger__media {
+         @media (max-width: $level_6) {
+            display: block;
+         }
+      }
    }
 
    // Media for Promo
@@ -225,22 +230,23 @@
             margin-top: 20px;
             margin-bottom: 155px;
          }
-         @media (max-width: $level_5) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+         @media (max-width: $level_5) and (min-width: $level_8) {
+            grid-template-columns: minmax(310px, 360px);
+            grid-template-rows: auto;
+            justify-content: center;
+            gap: 32px;
             padding: 0px 15px;
          }
       }
       &__card1 {
          @media (max-width: $level_7) {
-            width: 100%;
+            max-width: 360px;
             height: 248px;
          }
       }
       &__card4 {
-         @media (max-width: $level_5) and (min-width: $level_7) {
-            width: 360px;
+         @media (max-width: $level_5) {
+            grid-column: 1;
          }
          @media (max-width: $level_7) {
             width: 100%;
@@ -254,123 +260,124 @@
          }
       }
    }
+}
 
-   // Media for product
-   .product {
-      &__wrap {
-         @media (max-width: $level_3) {
-            margin-bottom: 65px;
-         }
-      }
-      &__grid-wrap {
-         @media (max-width: $level_4) {
-            gap: 16px;
-            margin: 72px auto 33px;
-            justify-content: center;
-         }
-         @media (max-width: $level_7) {
-            grid-template-columns: 1fr;
-         }
-      }
-      &-card {
-         &__img {
-            @media (max-width: $level_7) {
-               width: 100%;
-               height: auto;
-            }
-         }
-         &__name {
-            @media (max-width: $level_7) {
-               grid-template-columns: 310px;
-            }
-         }
-      }
-   }
-
-   // Media for feature
-   .feature {
-      &__flex-wrap {
-         @media (max-width: $level_3) {
-            flex-direction: column;
-            align-items: center;
-            padding: 0 15px 64px;
-         }
-      }
-      &__item {
-         @media (max-width: $level_3) {
-            max-width: 360px;
-            margin-top: 48px;
-         }
-      }
-   }
-
-   // Footer
-
-   // Media for subscribe
-   .subscribe {
+// Media for product
+.product {
+   &__wrap {
       @media (max-width: $level_3) {
-         background-position: 27% bottom;
-      }
-      &__wrap {
-         @media (max-width: $level_2) {
-            justify-content: space-around;
-         }
-         @media (max-width: $level_3) {
-            flex-direction: column;
-            align-items: center;
-            padding: 53px 15px 140px;
-         }
-         @media (max-width: $level_6) {
-            padding: 64px 9px 109px;
-         }
-      }
-      &__info {
-         @media (max-width: $level_2) {
-            width: 365px;
-         }
-         @media (max-width: $level_7) {
-            width: 320px;
-         }
-      }
-      &__form-wrap {
-         @media (max-width: $level_2) {
-            margin-right: 0;
-         }
-         @media (max-width: $level_3) {
-            margin-top: 48px;
-         }
-      }
-      &__input {
-         @media (max-width: $level_7) {
-            padding: 16px 28px 16px 28px;
-         }
-      }
-      &-info__h4 {
-         @media (max-width: $level_7) {
-            font-size: 18px;
-         }
-      }
-      &__h4 {
-         @media (max-width: $level_7) {
-            font-size: 14px;
-         }
+         margin-bottom: 65px;
       }
    }
-   // Footer_wrap
-   .footer {
-      &__wrap {
-         @media (max-width: $level_6) {
-            flex-direction: column-reverse;
-            padding-bottom: 9px;
+   &__grid-wrap {
+      @media (max-width: $level_4) {
+         gap: 16px;
+         margin: 72px auto 33px;
+         justify-content: center;
+      }
+      @media (max-width: $level_7) {
+         grid-template-columns: 1fr;
+      }
+   }
+   &-card {
+      &__img {
+         @media (max-width: $level_7) {
+            width: 100%;
+            height: auto;
          }
       }
-      &__links {
-         @media (max-width: $level_6) and (min-width: $level_8) {
-            padding: 43px 0 40px;
+      &__name {
+         @media (max-width: $level_7) {
+            grid-template-columns: 310px;
          }
       }
    }
 }
+
+// Media for feature
+.feature {
+   &__flex-wrap {
+      @media (max-width: $level_3) {
+         flex-direction: column;
+         align-items: center;
+         padding: 0 15px 64px;
+      }
+   }
+   &__item {
+      @media (max-width: $level_3) {
+         max-width: 360px;
+         margin-top: 48px;
+      }
+   }
+}
+
+// Footer
+
+// Media for subscribe
+.subscribe {
+   @media (max-width: $level_3) {
+      background-position: 27% bottom;
+   }
+   &__wrap {
+      @media (max-width: $level_2) {
+         justify-content: space-around;
+      }
+      @media (max-width: $level_3) {
+         flex-direction: column;
+         align-items: center;
+         padding: 53px 15px 140px;
+      }
+      @media (max-width: $level_6) {
+         padding: 64px 9px 109px;
+      }
+   }
+   &__info {
+      @media (max-width: $level_2) {
+         width: 365px;
+      }
+      @media (max-width: $level_7) {
+         width: 320px;
+      }
+   }
+   &__form-wrap {
+      @media (max-width: $level_2) {
+         margin-right: 0;
+      }
+      @media (max-width: $level_3) {
+         margin-top: 48px;
+      }
+   }
+   &__input {
+      @media (max-width: $level_7) {
+         padding: 16px 28px 16px 28px;
+      }
+   }
+   &-info__h4 {
+      @media (max-width: $level_7) {
+         font-size: 18px;
+      }
+   }
+   &__h4 {
+      @media (max-width: $level_7) {
+         font-size: 14px;
+      }
+   }
+}
+// Footer_wrap
+.footer {
+   &__wrap {
+      @media (max-width: $level_6) {
+         flex-direction: column-reverse;
+         padding-bottom: 9px;
+      }
+   }
+   &__links {
+      @media (max-width: $level_6) and (min-width: $level_8) {
+         padding: 43px 0 40px;
+      }
+   }
+}
+// }
 
 // Media for CATALOG
 
