--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -185,7 +185,7 @@
          @media (max-width: $level_5) {
             margin-left: 70px;
          }
-         @media (max-width: $level_7)  {
+         @media (max-width: $level_7) {
             font-size: 38px;
             margin: 0 auto;
          }
@@ -198,7 +198,7 @@
          @media (max-width: $level_5) {
             height: 82px;
          }
-         @media (max-width: $level_7)  {
+         @media (max-width: $level_7) {
             height: 61px;
             top: 0;
          }
@@ -208,7 +208,7 @@
             font-size: 24px;
             line-height: 29px;
          }
-         @media (max-width: $level_7)  {
+         @media (max-width: $level_7) {
             font-size: 20px;
             line-height: 24px;
          }
@@ -524,12 +524,8 @@
          }
       }
       &__card {
-         @media (max-width: $level_1) {
-            grid-template-columns: 36% 32% 23%;
-         }
          @media (max-width: $level_5) {
             gap: 17px;
-            grid-template-columns: 143px 143px 38px;
          }
          @media (max-width: $level_7) {
             grid-template-columns: 143px 154px 27px;
@@ -574,19 +570,18 @@
          }
       }
       &-card__close {
-         @media (max-width: $level_1) {
-            margin: 22px 20px 0 125px;
-         }
          @media (max-width: $level_5) {
             margin-top: 13px;
-            margin-left: 10px;
-            width: 10px;
-            height: 11px;
          }
-         @media (max-width: $level_7) {
-            margin-left: 3px;
+         &-svg {
+           @media (max-width: $level_6) {
+            width: 10px;
+            height: 10px;
+         } 
          }
       }
+
+
 
       // Buttons cart
       &__button {
